--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
